--- a/includes/foot.html
+++ b/includes/foot.html
@@ -12,14 +12,14 @@
                             <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
                             <polyline points="22,6 12,13 2,6"/>
                         </svg>
-                        <span>soporte@empresa.com</span>
+                        <span>karla.gonzalezde@imss.gob.mx</span>
                     </div>
                     
                     <div class="contact-item">
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
                         </svg>
-                        <span>+52 55 1234 5678</span>
+                        <span>Ext. 10641</span>
                     </div>
                     
                     <div class="contact-item">
@@ -27,7 +27,7 @@
                             <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
                             <circle cx="12" cy="10" r="3"/>
                         </svg>
-                        <span>Oficina Central - Piso 3</span>
+                        <span>Oficina Centrales - Piso 6 Oriente</span>
                     </div>
                     
                     <div class="contact-item">
@@ -35,7 +35,7 @@
                             <circle cx="12" cy="12" r="10"/>
                             <polyline points="12,6 12,12 16,14"/>
                         </svg>
-                        <span>Lun - Vie: 9:00 - 18:00</span>
+                        <span>Lun - Vie: 9:00 - 17:30</span>
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                 
                 <div class="system-info">
                     <small>Última actualización: <span id="lastUpdate">--:--</span></small>
-                    <small>Versión: 1.0.0</small>
+                    <small>Versión: 1.5.0</small>
                 </div>
             </div>
         </div>
